--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ background:         'assets/img/pine-tree.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 
-url:                https://www.lifeontheshoulders.com
+url:                http://www.lifeontheshoulders.com
 
 
 # Jekyll
