--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,7 @@ gems:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-gist
+  - jekyll/footnotes
 
 jekyll-mentions:
     base_url: https://github.com
