--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,8 @@ gems:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll/footnotes
+  - jekyll-footnotes
+
 
 jekyll-mentions:
     base_url: https://github.com
